--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -470,7 +470,9 @@ img {
 
 // Gutenberg support
 .layout--no-sidebar {
-
+	#page {
+		overflow: hidden;
+	}
 	#primary {
 
 		.entry-content {
@@ -505,8 +507,8 @@ img {
 			.entry-content {
 
 				> .alignfull {
-					margin-left: -30px;
-					margin-right: -30px;
+					margin-left: -55px;
+					margin-right: -55px;
 
 					&.wp-block-cover,
 					&.wp-block-cover-image {
