--- a/style.css
+++ b/style.css
@@ -2977,6 +2977,10 @@ img {
 	opacity: 1;
 }
 
+.layout--no-sidebar #page {
+	overflow: hidden;
+}
+
 .layout--no-sidebar #primary .entry-content > .alignfull {
 	margin-left: calc(50% - 50vw);
 	margin-right: calc(50% - 50vw);
@@ -2998,8 +3002,8 @@ img {
 }
 
 .layout--no-sidebar.layout-site--boxed #primary .entry-content > .alignfull {
-	margin-left: -30px;
-	margin-right: -30px;
+	margin-left: -55px;
+	margin-right: -55px;
 }
 
 .layout--no-sidebar.layout-site--boxed #primary .entry-content > .alignfull.wp-block-cover, .layout--no-sidebar.layout-site--boxed #primary .entry-content > .alignfull.wp-block-cover-image {
@@ -3370,6 +3374,14 @@ ul.wp-block-gallery {
 @media screen and (max-width: 1200px) {
 	#primary {
 		width: calc(100% - 360px);
+	}
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1400px) {
+	.layout--no-sidebar #primary .entry-content > .alignwide {
+		margin-left: -50px;
+		margin-right: -50px;
+		max-width: unset;
 	}
 }
 
